--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,13 @@ install:
   - dotnet restore
 script:
   - dotnet build
+before_deploy:
+- curl -L https://clis.ng.bluemix.net/download/bluemix-cli/0.6.1/linux64 | tar -zx
+- chmod -R u+x ./Bluemix_CLI/bin
+- chmod +x ./travis.sh
+deploy:
+  - provider: script
+    script: bash travis.sh
+    skip_cleanup: true
+    on:
+      branch: master    
