--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ mono: none
 dist: xenial
 dotnet: 3.1
 install:
+  - dotnet restore /home/travis/build/The-Brown-House/FoodYeah-BackEnd/FoodYeah.csproj
+script:
+  - dotnet build /home/travis/build/The-Brown-House/FoodYeah-BackEnd/FoodYeah.csproj
 before_deploy:
   - curl -L https://clis.ng.bluemix.net/download/bluemix-cli/0.6.1/linux64 | tar -zx
   - chmod -R u+x ./Bluemix_CLI/bin
